<resources>
    <string name="app_name">ALSC</string>
    <string name="chat_chat">聊天</string>
    <string name="chat_friends">好友</string>
    <string name="chat_recording">录制中</string>
    <string name="chat_slide_up_cancel_send">上滑取消发送</string>
    <string name="chat_up_cancel_send">松开手指，取消发送</string>
    <string name="chat_release_send">松手立即发送</string>
    <string name="chat_in_forbid">禁言中</string>
    <string name="chat_type_image">[图片]</string>
    <string name="chat_type_voice">[语音]</string>
    <string name="chat_type_video">[视频]</string>
    <string name="chat_type_location">[位置]</string>
    <string name="chat_type_file">[文件]</string>
    <string name="chat_type_red_package">[红包]</string>
    <string name="chat_type_new_member_red_package">[新人红包]</string>
    <string name="chat_type_transfer">[转账]</string>
    <string name="chat_type_personal_profile">[个人名片]</string>
    <string name="chat_start_group_chat">发起群聊</string>
    <string name="chat_help_feedback">帮助与反馈</string>
    <string name="chat_search_contact">搜索联系人</string>
    <string name="chat_new_friend">新的朋友</string>
    <string name="chat_label">标签</string>
    <string name="chat_my_chat_groups">我的群聊</string>
    <string name="chat_star_friends">星标好友</string>
    <string name="chat_contact">联系人</string>
    <string name="chat_search_xxx">搜索%1$s</string>
    <string name="chat_search">搜索</string>
    <string name="chat_all_labels">所有标签</string>
    <string name="chat_create">新建</string>
    <string name="chat_no_label">暂无标签</string>
    <string name="chat_add_label_speard_friends">你可以通过给朋友添加标签来进行分类</string>
    <string name="chat_create_label">新建标签</string>
    <string name="chat_select_friend">选择联系人</string>
    <string name="chat_ok_1">确定(%1$s)</string>
    <string name="chat_edit_label">编辑标签</string>
    <string name="chat_edit">编辑</string>
    <string name="chat_save">保存</string>
    <string name="chat_label_name">标签名字</string>
    <string name="chat_label_example">例如家人、朋友</string>
    <string name="chat_label_member">成员</string>
    <string name="chat_delete_label">删除标签</string>
    <string name="chat_save_as_label">保存为标签</string>
    <string name="chat_add_memo">添加备注</string>
    <string name="chat_friend_memo">好友备注</string>
    <string name="chat_more_info">更多信息</string>
    <string name="chat_send_msg">发送消息</string>
    <string name="chat_send">发送</string>
    <string name="chat_location_info">位置信息</string>
    <string name="chat_install_file_selector">请安装一个文件选择器</string>
    <string name="chat_please_select_a_file">请选择一个文件</string>
    <string name="chat_file_max_size">文件最大长度不能超过15M</string>
    <string name="chat_group_chat">群聊</string>
    <string name="chat_download">下载</string>
    <string name="chat_open_file">用其他应用打开</string>
    <string name="chat_group_name">群聊名称</string>
    <string name="chat_choose_a_group">选择一个群</string>
    <string name="chat_are_you_sure_send_msg">确定发送此消息给该群或者该联系人？</string>
    <string name="chat_take_photo">拍摄</string>
    <string name="chat_album">相册</string>
    <string name="chat_select_photo">图片</string>
    <string name="chat_select_video">视频</string>
    <string name="chat_video">小视频</string>
    <string name="chat_my_location">我的位置</string>
    <string name="chat_leave_msg">留言</string>
    <string name="chat_red_package">红包</string>
    <string name="chat_transfer">转账</string>
    <string name="chat_file">文件</string>
    <string name="chat_delete_after_read">阅后即焚</string>
    <string name="chat_cancel">取消</string>
    <string name="chat_ok">确定</string>
    <string name="chat_record_time_too_short">录制声音时间太短</string>
    <string name="chat_alsc_service">ALSC 客服</string>
    <string name="chat_cancel_record">上划取消录音</string>
    <string name="chat_add_friend_first_said">我通过了你的好友验证请求，现在我们可以开始聊天了</string>
    <string name="chat_set_delete_msg_time">设置信息自销毁时间</string>
    <string name="chat_delete_after_read_type_0">关闭</string>
    <string name="chat_delete_after_read_type_1">15分钟</string>
    <string name="chat_delete_after_read_type_2">1小时</string>
    <string name="chat_delete_after_read_type_3">24小时</string>
    <string name="chat_delete_after_read_type_4">1周</string>
    <string name="chat_rest_time_delete">%1$s后焚毁</string>
    <string name="chat_day">%1$s天</string>
    <string name="chat_hour">%1$s小时</string>
    <string name="chat_minute">%1$s分钟</string>
    <string name="chat_add_friend">添加朋友</string>
    <string name="chat_my_id">我的ID：%1$s</string>
    <string name="chat_id_phone_email">ID号/账户/手机号/邮箱</string>
    <string name="chat_scan">扫一扫</string>
    <string name="chat_scan_qrcode">扫描二维码名片</string>
    <string name="chat_phone_contact">手机联系人</string>
    <string name="chat_add_or_invate_contact">添加或邀请通讯录中的好友</string>
    <string name="chat_add_remark">添加备注</string>
    <string name="chat_remarh_cannot_empty">备注不能为空</string>
    <string name="chat_done">完成</string>
    <string name="chat_accept">接受</string>
    <string name="chat_had_expire">已过期</string>
    <string name="chat_had_added">已添加</string>
    <string name="chat_you_need_send_verify_apply">你需要发送验证申请，等对方通过</string>
    <string name="chat_add_friend_remark">为朋友添加备注</string>
    <string name="chat_i_am">我是%1$s</string>
    <string name="chat_accespt">接受</string>
    <string name="chat_add">添加</string>
    <string name="chat_had_add">已添加</string>
    <string name="chat_request_you_as_friend">请求添加你为朋友</string>
    <string name="chat_copy">复制</string>
    <string name="chat_send_to_friend">发送给朋友</string>
    <string name="chat_muti_choose">多选</string>
    <string name="chat_translate">翻译</string>
    <string name="chat_translate_failed">翻译失败，请稍后再试</string>
    <string name="chat_delete">删除</string>
    <string name="chat_delete_msg">删除消息</string>
    <string name="chat_delete_msg_tip_1">您确定要删除这条消息吗？不可恢复</string>
    <string name="chat_delete_msg_tip_2">同时删除对方消息</string>
    <string name="chat_delete_msg_tip_3">同时删除群聊消息</string>
    <string name="chat_qr_code">二维码名片</string>
    <string name="chat_group_qr_code">群二维码名片</string>
    <string name="chat_save_qrcode">保存二维码到手机</string>
    <string name="chat_group_member_num">该群聊人数：%1$s</string>
    <string name="chat_personal_profile">个人名片</string>
    <string name="chat_red_package_record">红包记录</string>
    <string name="chat_xxx_red_package">%1$s的红包</string>
    <string name="chat_red_package_had_get">%1$s个红包已被领取</string>
    <string name="chat_get_max_red_package">手气最佳</string>
    <string name="chat_all_red_package_had_get">红包已经被抢光啦</string>
    <string name="chat_send_red_package">发红包</string>
    <string name="chat_quantity">数量</string>
    <string name="chat_please_input_quantity">请输入数量</string>
    <string name="chat_please_input_num">请输入个数</string>
    <string name="chat_red_package_limit">单个红包不可超过200 手续费5%</string>
    <string name="chat_red_package_quantity_tip">单个红包不可超过200</string>
    <string name="chat_alsc">ALSC</string>
    <string name="chat_red_package_remark">备注说明</string>
    <string name="chat_send_red_package_2">发送红包</string>
    <string name="chat_please_input">请输入</string>
    <string name="chat_pay_password">支付密码</string>
    <string name="chat_money_package">资产红包</string>
    <string name="chat_please_input_pay_password">请输入支付密码</string>
    <string name="chat_look_red_package">查看红包</string>
    <string name="chat_open_red_package">立即打开</string>
    <string name="chat_all_red_package_had_complete">红包已经派完啦</string>
    <string name="chat_red_package_had_expire">红包已过期</string>
    <string name="chat_red_package_default_remark">恭喜发财</string>
    <string name="chat_transfer_to_xxx">转账给%1$s</string>
    <string name="chat_you">你</string>
    <string name="chat_xxx_invite_xxx_add_group">%1$s邀请%2$s加入群聊</string>
    <string name="chat_xxx_remove_from_group">%1$s被移出群聊</string>
    <string name="chat_xxx_in_group_by_qrcode">%1$s通过扫描二维码加入群聊</string>
    <string name="chat_all_forbid_chat">全员禁言</string>
    <string name="chat_group_ower_update_group_name">群主修改了群名</string>
    <string name="chat_group_ower_update_group_notice">群主修改了群公告</string>
    <string name="chat_change_to_common">改为普通红包</string>
    <string name="chat_change_to_random">改为拼手气红包</string>
    <string name="chat_red_package_num">红包个数</string>
    <string name="chat_red_package_rest_num">剩余个数</string>
    <string name="chat_xxx_num">个</string>
    <string name="chat_member_num">本群共%1$s人</string>
    <string name="chat_alsc_ask">ALSC 傲斯卡</string>
    <string name="chat_had_get_red_pacage">已领取红包</string>
    <string name="chat_peer_had_get_red_pacage">对方已领取红包</string>
    <string name="chat_wait_peer_to_red_pacage">等待对方领取红包</string>
    <string name="chat_group_red_pacage_status">%1$s个红包已被领取</string>
    <string name="chat_group_red_pacage_total">，共%1$sALSC</string>
    <string name="chat_had_get">领取了</string>
    <string name="chat_de">的</string>
    <string name="chat_mine">自己</string>
    <string name="chat_my_send_red_package">发出的红包</string>
    <string name="chat_my_receive_red_package">收到的红包</string>
    <string name="chat_xxx_total_send">%1$s共发出</string>
    <string name="chat_xxx_total_receive">%1$s共收到</string>
    <string name="chat_total_send_num">发出的红包总数<font color="#22DC9A">%1$s</font>个</string>
    <string name="chat_total_receive_num">收到的红包总数%1$s个</string>
    <string name="chat_common_red_package">普通红包</string>
    <string name="chat_random_red_package">拼手气红包</string>
    <string name="chat_receive_red_package_num">收到红包</string>
    <string name="chat_new_member_red_package">新人资产红包</string>
    <string name="chat_new_member_red_package_2">新人红包</string>
    <string name="chat_new_member_special_red_package">新人进群专属红包</string>
    <string name="chat_group_message">群聊信息(%1$s)</string>
    <string name="chat_see_all_member">查看全部群成员</string>
    <string name="chat_group_qrcode">群二维码</string>
    <string name="chat_group_notice">群公告</string>
    <string name="chat_group_manager">群管理</string>
    <string name="chat_group_cover">设置群封面</string>
    <string name="chat_message_not_interupt">消息免打扰</string>
    <string name="chat_top_chat">置顶聊天</string>
    <string name="chat_nick_in_group">我在本群昵称</string>
    <string name="chat_input_filter_letter">输入屏蔽关键词</string>
    <string name="chat_show_group_member_nick">显示群成员昵称</string>
    <string name="chat_chat_record">聊天记录</string>
    <string name="chat_xxx_chat_record">%1$s条相关聊天记录</string>
    <string name="chat_search_chat_record">查找聊天记录</string>
    <string name="chat_clear_chat_record">清空聊天记录</string>
    <string name="chat_delete_and_quit">删除并退出</string>
    <string name="chat_update_group_notice">修改群公告</string>
    <string name="chat_finish">完成</string>
    <string name="chat_update_group_name">修改群聊名称</string>
    <string name="chat_tip">提示</string>
    <string name="chat_are_you_sure_delete_group_chat_record">确定删除该群的聊天记录？</string>
    <string name="chat_are_you_sure_delete_group">确定删除并退出该群？</string>
    <string name="chat_are_you_sure_delete_chat_record">确定删除和%1$s的聊天记录？</string>
    <string name="chat_are_you_sure_delete_contact">确定删除%1$s联系人？</string>
    <string name="chat_are_you_sure_block_contact">确定拉黑%1$s联系人？</string>
    <string name="chat_chat_message">聊天信息</string>
    <string name="chat_chat_are_you_sure_give_group_to_other">确认将此群转让给%1$s吗？</string>
    <string name="chat_chat_are_you_sure_end_group">您确定要将此群解散吗？</string>
    <string name="chat_new_member_red_package_setting">新人红包设置</string>
    <string name="chat_no_new_member_red_package">暂无新人红包</string>
    <string name="chat_language_0">简体中文</string>
    <string name="chat_language_2">English</string>
    <string name="chat_language_3">日本語</string>
    <string name="chat_language_4">한국어</string>
    <string name="chat_language_5">Tiếng việt</string>
    <string name="chat_countdown_time">········· 倒计时 ·········</string>
    <string name="chat_day_1">天</string>
    <string name="chat_hour_1">时</string>
    <string name="chat_minute_1">分</string>
    <string name="chat_second_1">秒</string>
</resources>