<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="14dp"
        android:layout_height="7dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_triangle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_2e374c_2"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_item1"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="13dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="7dp"
                android:src="@mipmap/icon_country1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_language_2"
                android:textColor="@color/text_color"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="13dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="7dp"
                android:src="@mipmap/icon_country2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_language_3"
                android:textColor="@color/text_color"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item3"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="13dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="7dp"
                android:src="@mipmap/icon_country3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_language_4"
                android:textColor="@color/text_color"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item4"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="13dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="7dp"
                android:src="@mipmap/icon_country4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_language_5"
                android:textColor="@color/text_color"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item5"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="13dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="7dp"
                android:src="@mipmap/icon_country5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_language_0"
                android:textColor="@color/text_color"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
