<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-92dp"
        android:background="@drawable/bg_chat_more_dialog_4"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_f8_ab_0a"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="240dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_2e3a51_stroke_radius_4"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:textColor="@color/color_ff_ff_ff"
                android:textSize="12dp" />

        </ScrollView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:text="@string/chat_countdown_time"
            android:textColor="@color/color_f8_ab_0a"
            android:textSize="14dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDay"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="00"
                android:textColor="@color/color_f8_ab_0a"
                android:textSize="21.5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="2dp"
                android:text="@string/chat_day_1"
                android:textColor="@color/color_ff_ff_ff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvHour"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="00"
                android:textColor="@color/color_f8_ab_0a"
                android:textSize="21.5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="2dp"
                android:text="@string/chat_hour_1"
                android:textColor="@color/color_ff_ff_ff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvMinute"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="00"
                android:textColor="@color/color_f8_ab_0a"
                android:textSize="21.5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="2dp"
                android:text="@string/chat_minute_1"
                android:textColor="@color/color_ff_ff_ff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvSecond"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="00"
                android:textColor="@color/color_f8_ab_0a"
                android:textSize="21.5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="2dp"
                android:text="@string/chat_second_1"
                android:textColor="@color/color_ff_ff_ff"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvMilSecond"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="000"
                android:textColor="@color/color_f8_ab_0a"
                android:textSize="21.5dp" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:src="@drawable/chat_dialog_close" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="334.5dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/many_coins" />


</RelativeLayout>